Fixed incorrect translation Added elemental materials Added material block Added some textures for material items

--- a/src/main/resources/assets/ht_materials/lang/en_us.json
+++ b/src/main/resources/assets/ht_materials/lang/en_us.json
@@ -1,15 +1,33 @@
 {
+  "ht_material.aluminum": "Aluminum",
+  "ht_material.antimony": "Antimony",
+  "ht_material.beryllium": "Beryllium",
+  "ht_material.cadmium": "Cadmium",
+  "ht_material.chromium": "Chromium",
   "ht_material.copper": "Copper",
-  "ht_material.diamond": "Netherite",
+  "ht_material.diamond": "Diamond",
   "ht_material.gold": "Gold",
   "ht_material.helium": "Helium",
   "ht_material.hydrogen": "Hydrogen",
+  "ht_material.iridium": "Iridium",
   "ht_material.iron": "Iron",
   "ht_material.lava": "Lava",
+  "ht_material.lead": "Lead",
   "ht_material.lithium": "Lithium",
+  "ht_material.manganese": "Manganese",
   "ht_material.netherite": "Netherite",
+  "ht_material.nickel": "Nickel",
+  "ht_material.platinum": "Platinum",
+  "ht_material.plutonium": "Plutonium",
+  "ht_material.silicon": "Silicon",
+  "ht_material.silver": "Silver",
+  "ht_material.tin": "Tin",
+  "ht_material.titanium": "Titanium",
+  "ht_material.tungsten": "Tungsten",
+  "ht_material.uranium": "Uranium",
   "ht_material.water": "Water",
   "ht_material.wood": "Wood",
+  "ht_material.zinc": "Zinc",
   "ht_shape.block": "Block of %s",
   "ht_shape.dust": "%s Dust",
   "ht_shape.gear": "%s Gear",
@@ -18,5 +36,7 @@
   "ht_shape.nugget": "%s Nugget",
   "ht_shape.plate": "%s Plate",
   "ht_shape.raw_block": "Raw %s Block",
-  "ht_shape.raw_ore": "Raw %s Ore"
+  "ht_shape.raw_ore": "Raw %s Ore",
+  "ht_shape.rod": "%s Rod",
+  "itemGroup.ht_materials.material": "HT Materials"
 }
