--- a/src/main/resources/assets/ht_materials/lang/en_us.json
+++ b/src/main/resources/assets/ht_materials/lang/en_us.json
@@ -1,46 +1,90 @@
 {
   "ht_material.aluminum": "Aluminum",
+  "ht_material.amethyst": "Amethyst",
+  "ht_material.andesite": "Andesite",
   "ht_material.antimony": "Antimony",
+  "ht_material.basalt": "Basalt",
   "ht_material.beryllium": "Beryllium",
+  "ht_material.brick": "Brick",
+  "ht_material.bricks": "Bricks",
   "ht_material.cadmium": "Cadmium",
+  "ht_material.calcite": "Calcite",
+  "ht_material.calcium": "Calcium",
+  "ht_material.carbon": "Carbon",
+  "ht_material.charcoal": "Charcoal",
   "ht_material.chromium": "Chromium",
+  "ht_material.clay": "Clay",
+  "ht_material.coal": "Coal",
   "ht_material.copper": "Copper",
+  "ht_material.coral": "Coral",
+  "ht_material.deepslate": "Deepslate",
   "ht_material.diamond": "Diamond",
+  "ht_material.diorite": "Diorite",
+  "ht_material.dripstone": "Dripstone",
+  "ht_material.emerald": "Emerald",
+  "ht_material.end_stone": "End Stone",
+  "ht_material.ender_pearl": "Ender Pearl",
+  "ht_material.glass": "Glass",
+  "ht_material.glowstone": "Glowstone",
   "ht_material.gold": "Gold",
+  "ht_material.granite": "Granite",
   "ht_material.helium": "Helium",
   "ht_material.hydrogen": "Hydrogen",
   "ht_material.iridium": "Iridium",
   "ht_material.iron": "Iron",
+  "ht_material.lapis": "Lapis",
   "ht_material.lava": "Lava",
   "ht_material.lead": "Lead",
   "ht_material.lithium": "Lithium",
   "ht_material.manganese": "Manganese",
+  "ht_material.nether_brick": "Nether Brick",
   "ht_material.netherite": "Netherite",
+  "ht_material.netherrack": "Netherrack",
   "ht_material.nickel": "Nickel",
+  "ht_material.obsidian": "Obsidian",
   "ht_material.platinum": "Platinum",
   "ht_material.plutonium": "Plutonium",
+  "ht_material.prismarine": "Prismarine",
+  "ht_material.quartz": "Quartz",
+  "ht_material.redstone": "Redstone",
   "ht_material.silicon": "Silicon",
   "ht_material.silver": "Silver",
+  "ht_material.stone": "Stone",
   "ht_material.tin": "Tin",
   "ht_material.titanium": "Titanium",
+  "ht_material.tuff": "Tuff",
   "ht_material.tungsten": "Tungsten",
   "ht_material.uranium": "Uranium",
   "ht_material.water": "Water",
   "ht_material.wood": "Wood",
   "ht_material.zinc": "Zinc",
+  "ht_shape.blade": "%s Blade",
   "ht_shape.block": "Block of %s",
+  "ht_shape.bolt": "%s Bolt",
+  "ht_shape.bucket": "%s Bucket",
+  "ht_shape.crushed_dust": "%s Crushed Dust",
+  "ht_shape.curved_plate": "%s Curved Plate",
+  "ht_shape.double_ingot": "%s Bucket",
+  "ht_shape.drill_head": "%s Drill Head",
   "ht_shape.dust": "%s Dust",
+  "ht_shape.fluid": "%s",
   "ht_shape.gear": "%s Gear",
   "ht_shape.gem": "%s",
+  "ht_shape.hot_ingot": "%s Hot Ingot",
   "ht_shape.ingot": "%s Ingot",
+  "ht_shape.large_plate": "%s Large Plate",
   "ht_shape.nugget": "%s Nugget",
   "ht_shape.ore": "%s Ore",
   "ht_shape.plate": "%s Plate",
   "ht_shape.raw_block": "Raw %s Block",
   "ht_shape.raw_ore": "Raw %s Ore",
+  "ht_shape.ring": "%s Ring",
   "ht_shape.rod": "%s Rod",
+  "ht_shape.rotor": "%s Rotor",
+  "ht_shape.tiny_dust": "%s Tiny Dust",
+  "ht_shape.wire": "%s Wire",
   "itemGroup.ht_materials.material": "HT Materials",
-  "tooltip.ht_materials.material.fluid_amount": "§7- Fluid Amount: %s Unit/ingot",
+  "tooltip.ht_materials.material.fluid_amount": "§7- Fluid Amount: %s Unit",
   "tooltip.ht_materials.material.formula": "§7- Formula: %s",
   "tooltip.ht_materials.material.luminance": "§7- Luminance: %s",
   "tooltip.ht_materials.material.mining_level": "§7- Mining Level: %s",
