Add forgotten materials- oxygen, nitrogen and fluorine.

--- a/src/main/resources/assets/ht_materials/lang/en_us.json
+++ b/src/main/resources/assets/ht_materials/lang/en_us.json
@@ -24,6 +24,7 @@
   "ht_material.emerald": "Emerald",
   "ht_material.end_stone": "End Stone",
   "ht_material.ender_pearl": "Ender Pearl",
+  "ht_material.fluorine": "Fluorine",
   "ht_material.glass": "Glass",
   "ht_material.glowstone": "Glowstone",
   "ht_material.gold": "Gold",
@@ -41,7 +42,9 @@
   "ht_material.netherite": "Netherite",
   "ht_material.netherrack": "Netherrack",
   "ht_material.nickel": "Nickel",
+  "ht_material.nitrogen": "Nitrogen",
   "ht_material.obsidian": "Obsidian",
+  "ht_material.oxygen": "Oxygen",
   "ht_material.platinum": "Platinum",
   "ht_material.plutonium": "Plutonium",
   "ht_material.prismarine": "Prismarine",
