Removed version range for Fabric Language Kotlin Rewritten some material textures Fixed Material Bucket Name Changed Ingot Model Added Molar Mass for Material

--- a/src/main/resources/assets/ht_materials/lang/en_us.json
+++ b/src/main/resources/assets/ht_materials/lang/en_us.json
@@ -86,14 +86,18 @@
   "ht_shape.rotor": "%s Rotor",
   "ht_shape.tiny_dust": "%s Tiny Dust",
   "ht_shape.wire": "%s Wire",
+  "item.ht_materials.icon": "HT Materials",
   "itemGroup.ht_materials.material": "HT Materials",
   "tooltip.ht_materials.material.fluid_amount": "§7- Fluid Amount: %s Unit",
   "tooltip.ht_materials.material.formula": "§7- Formula: %s",
   "tooltip.ht_materials.material.luminance": "§7- Luminance: %s",
   "tooltip.ht_materials.material.mining_level": "§7- Mining Level: %s",
   "tooltip.ht_materials.material.mining_tool": "§7- Mining Tool: %s",
+  "tooltip.ht_materials.material.molar": "§7- Molar Mass: %s g/mol",
   "tooltip.ht_materials.material.name": "§7- Name: %s",
   "tooltip.ht_materials.material.state": "§7- State: %s",
+  "tooltip.ht_materials.material.state.fluid": "Fluid",
+  "tooltip.ht_materials.material.state.gas": "Gas",
   "tooltip.ht_materials.material.temperature": "§7- Temperature: %s K",
   "tooltip.ht_materials.material.title": "§e=== Material Info === ",
   "tooltip.ht_materials.material.viscosity": "§7- Viscosity: %s"
