--- a/src/main/resources/assets/ht_materials/lang/ja_jp.json
+++ b/src/main/resources/assets/ht_materials/lang/ja_jp.json
@@ -86,14 +86,18 @@
   "ht_shape.rotor": "%sのローター",
   "ht_shape.tiny_dust": "%sの小さな粉",
   "ht_shape.wire": "%sのワイヤー",
+  "item.ht_materials.icon": "HT Materials",
   "itemGroup.ht_materials.material": "HT Materials",
   "tooltip.ht_materials.material.fluid_amount": "§7- 液体量: %s単位",
   "tooltip.ht_materials.material.formula": "§7- 化学式: %s",
   "tooltip.ht_materials.material.luminance": "§7- 明るさ: %s",
   "tooltip.ht_materials.material.mining_level": "§7- 採掘レベル: %s",
   "tooltip.ht_materials.material.mining_tool": "§7- 適正ツール: %s",
+  "tooltip.ht_materials.material.molar": "§7- モル質量: %s g/mol",
   "tooltip.ht_materials.material.name": "§7- 名称: %s",
   "tooltip.ht_materials.material.state": "§7- 状態: %s",
+  "tooltip.ht_materials.material.state.fluid": "液体",
+  "tooltip.ht_materials.material.state.gas": "気体",
   "tooltip.ht_materials.material.temperature": "§7- 温度: %s K",
   "tooltip.ht_materials.material.title": "§e=== 素材情報 === ",
   "tooltip.ht_materials.material.viscosity": "§7- 粘度: %s"
