Rewritten material color, formula, molar mass

--- a/src/main/resources/assets/ht_materials/lang/en_us.json
+++ b/src/main/resources/assets/ht_materials/lang/en_us.json
@@ -3,27 +3,37 @@
   "ht_material.amethyst": "Amethyst",
   "ht_material.andesite": "Andesite",
   "ht_material.antimony": "Antimony",
+  "ht_material.ash": "Ash",
   "ht_material.basalt": "Basalt",
+  "ht_material.bauxite": "Bauxite",
   "ht_material.beryllium": "Beryllium",
+  "ht_material.brass": "Brass",
   "ht_material.brick": "Brick",
   "ht_material.bricks": "Bricks",
+  "ht_material.bronze": "Bronze",
   "ht_material.cadmium": "Cadmium",
   "ht_material.calcite": "Calcite",
   "ht_material.calcium": "Calcium",
   "ht_material.carbon": "Carbon",
   "ht_material.charcoal": "Charcoal",
+  "ht_material.chlorine": "Chlorine",
   "ht_material.chromium": "Chromium",
+  "ht_material.cinnabar": "Cinnabar",
   "ht_material.clay": "Clay",
   "ht_material.coal": "Coal",
+  "ht_material.cobalt": "Cobalt",
+  "ht_material.coke": "Coke",
   "ht_material.copper": "Copper",
   "ht_material.coral": "Coral",
   "ht_material.deepslate": "Deepslate",
   "ht_material.diamond": "Diamond",
   "ht_material.diorite": "Diorite",
   "ht_material.dripstone": "Dripstone",
+  "ht_material.electrum": "Electrum",
   "ht_material.emerald": "Emerald",
   "ht_material.end_stone": "End Stone",
   "ht_material.ender_pearl": "Ender Pearl",
+  "ht_material.flint": "Flint",
   "ht_material.fluorine": "Fluorine",
   "ht_material.glass": "Glass",
   "ht_material.glowstone": "Glowstone",
@@ -31,32 +41,49 @@
   "ht_material.granite": "Granite",
   "ht_material.helium": "Helium",
   "ht_material.hydrogen": "Hydrogen",
+  "ht_material.invar": "Invar",
   "ht_material.iridium": "Iridium",
   "ht_material.iron": "Iron",
   "ht_material.lapis": "Lapis",
   "ht_material.lava": "Lava",
   "ht_material.lead": "Lead",
   "ht_material.lithium": "Lithium",
+  "ht_material.magnesium": "Magnesium",
   "ht_material.manganese": "Manganese",
+  "ht_material.marble": "Marble",
+  "ht_material.mercury": "Mercury",
   "ht_material.nether_brick": "Nether Brick",
   "ht_material.netherite": "Netherite",
   "ht_material.netherrack": "Netherrack",
   "ht_material.nickel": "Nickel",
   "ht_material.nitrogen": "Nitrogen",
   "ht_material.obsidian": "Obsidian",
+  "ht_material.olivine": "Olivine",
   "ht_material.oxygen": "Oxygen",
+  "ht_material.peridot": "Peridot",
+  "ht_material.phosphorus": "Phosphorus",
   "ht_material.platinum": "Platinum",
   "ht_material.plutonium": "Plutonium",
+  "ht_material.potassium": "Potassium",
   "ht_material.prismarine": "Prismarine",
   "ht_material.quartz": "Quartz",
   "ht_material.redstone": "Redstone",
+  "ht_material.rubber": "Rubber",
+  "ht_material.ruby": "Ruby",
+  "ht_material.salt": "Salt",
+  "ht_material.sapphire": "Sapphire",
   "ht_material.silicon": "Silicon",
   "ht_material.silver": "Silver",
+  "ht_material.sodium": "Sodium",
+  "ht_material.stainless_steel": "Stainless Steel",
+  "ht_material.steel": "Steel",
   "ht_material.stone": "Stone",
+  "ht_material.sulfur": "Sulfur",
   "ht_material.tin": "Tin",
   "ht_material.titanium": "Titanium",
   "ht_material.tuff": "Tuff",
   "ht_material.tungsten": "Tungsten",
+  "ht_material.tungstensteel": "Tungsten Steel",
   "ht_material.uranium": "Uranium",
   "ht_material.water": "Water",
   "ht_material.wood": "Wood",
