--- a/src/main/resources/assets/ht_materials/lang/ja_jp.json
+++ b/src/main/resources/assets/ht_materials/lang/ja_jp.json
@@ -3,27 +3,37 @@
   "ht_material.amethyst": "アメジスト",
   "ht_material.andesite": "安山岩",
   "ht_material.antimony": "アンチモニー",
+  "ht_material.ash": "灰",
   "ht_material.basalt": "玄武岩",
+  "ht_material.bauxite": "ボーキサイト",
   "ht_material.beryllium": "ベリリウム",
+  "ht_material.brass": "黄銅",
   "ht_material.brick": "レンガ",
   "ht_material.bricks": "レンガ",
+  "ht_material.bronze": "青銅",
   "ht_material.cadmium": "カドミウム",
   "ht_material.calcite": "方解石",
   "ht_material.calcium": "カルシウム",
   "ht_material.carbon": "炭素",
   "ht_material.charcoal": "木炭",
+  "ht_material.chlorine": "塩素",
   "ht_material.chromium": "クロム",
+  "ht_material.cinnabar": "辰砂",
   "ht_material.clay": "粘土",
   "ht_material.coal": "石炭",
+  "ht_material.cobalt": "コバルト",
+  "ht_material.coke": "コークス",
   "ht_material.copper": "銅",
   "ht_material.coral": "サンゴ",
   "ht_material.deepslate": "深層岩",
   "ht_material.diamond": "ダイヤモンド",
   "ht_material.diorite": "閃緑岩",
   "ht_material.dripstone": "鍾乳石",
+  "ht_material.electrum": "エレクトラム",
   "ht_material.emerald": "エメラルド",
   "ht_material.end_stone": "エンドストーン",
   "ht_material.ender_pearl": "エンダーパール",
+  "ht_material.flint": "火打石",
   "ht_material.fluorine": "フッ素",
   "ht_material.glass": "ガラス",
   "ht_material.glowstone": "グロウストーン",
@@ -31,32 +41,49 @@
   "ht_material.granite": "花崗岩",
   "ht_material.helium": "ヘリウム",
   "ht_material.hydrogen": "水素",
+  "ht_material.invar": "インバー",
   "ht_material.iridium": "イリジウム",
   "ht_material.iron": "鉄",
   "ht_material.lapis": "ラピスラズリ",
   "ht_material.lava": "溶岩",
   "ht_material.lead": "鉛",
   "ht_material.lithium": "リチウム",
+  "ht_material.magnesium": "マグネシウｍ",
   "ht_material.manganese": "マンガン",
+  "ht_material.marble": "大理石",
+  "ht_material.mercury": "水銀",
   "ht_material.nether_brick": "ネザーレンガ",
   "ht_material.netherite": "ネザライト",
   "ht_material.netherrack": "ネザーラック",
   "ht_material.nickel": "ニッケル",
   "ht_material.nitrogen": "窒素",
   "ht_material.obsidian": "黒曜石",
+  "ht_material.olivine": "橄欖石",
   "ht_material.oxygen": "酸素",
+  "ht_material.peridot": "ペリドット",
+  "ht_material.phosphorus": "リン",
   "ht_material.platinum": "プラチナ",
   "ht_material.plutonium": "プルトニウム",
+  "ht_material.potassium": "カリウム",
   "ht_material.prismarine": "プリズマリン",
   "ht_material.quartz": "クォーツ",
   "ht_material.redstone": "レッドストーン",
+  "ht_material.rubber": "ゴム",
+  "ht_material.ruby": "ルビー",
+  "ht_material.salt": "食塩",
+  "ht_material.sapphire": "サファイア",
   "ht_material.silicon": "ケイ素",
   "ht_material.silver": "銀",
+  "ht_material.sodium": "ナトリウム",
+  "ht_material.stainless_steel": "ステンレス鋼",
+  "ht_material.steel": "鋼",
   "ht_material.stone": "石",
+  "ht_material.sulfur": "硫黄",
   "ht_material.tin": "錫",
   "ht_material.titanium": "チタン",
   "ht_material.tuff": "凝灰岩",
   "ht_material.tungsten": "タングステン",
+  "ht_material.tungstensteel": "タングステン鋼",
   "ht_material.uranium": "ウラン",
   "ht_material.water": "水",
   "ht_material.wood": "木材",
