--- a/src/main/resources/assets/ht_materials/lang/ja_jp.json
+++ b/src/main/resources/assets/ht_materials/lang/ja_jp.json
@@ -58,7 +58,7 @@
   "ht_material.nickel": "ニッケル",
   "ht_material.nitrogen": "窒素",
   "ht_material.obsidian": "黒曜石",
-  "ht_material.olivine": "橄欖石",
+  "ht_material.olivine": "カンラン石",
   "ht_material.oxygen": "酸素",
   "ht_material.peridot": "ペリドット",
   "ht_material.phosphorus": "リン",
@@ -70,7 +70,7 @@
   "ht_material.redstone": "レッドストーン",
   "ht_material.rubber": "ゴム",
   "ht_material.ruby": "ルビー",
-  "ht_material.salt": "食塩",
+  "ht_material.salt": "塩",
   "ht_material.sapphire": "サファイア",
   "ht_material.silicon": "ケイ素",
   "ht_material.silver": "銀",
@@ -100,7 +100,7 @@
   "ht_shape.fluid": "%s",
   "ht_shape.gear": "%sの歯車",
   "ht_shape.gem": "%s",
-  "ht_shape.hot_ingot": "%s Hot Ingot",
+  "ht_shape.hot_ingot": "熱い%sインゴット",
   "ht_shape.ingot": "%sインゴット",
   "ht_shape.large_plate": "%sの大きな板",
   "ht_shape.nugget": "%sナゲット",
