add Missed Localize Key with IR

--- a/src/main/resources/assets/ht_materials/lang/en_us.json
+++ b/src/main/resources/assets/ht_materials/lang/en_us.json
@@ -91,6 +91,7 @@
   "ht_shape.block": "Block of %s",
   "ht_shape.bolt": "%s Bolt",
   "ht_shape.bucket": "%s Bucket",
+  "ht_shape.chunk": "%s Chunk",
   "ht_shape.crushed_dust": "%s Crushed Dust",
   "ht_shape.curved_plate": "%s Curved Plate",
   "ht_shape.double_ingot": "%s Double Ingot",
@@ -105,6 +106,7 @@
   "ht_shape.nugget": "%s Nugget",
   "ht_shape.ore": "%s Ore",
   "ht_shape.plate": "%s Plate",
+  "ht_shape.purified_ore": "%s Purified Ore",
   "ht_shape.raw_block": "Raw %s Block",
   "ht_shape.raw_ore": "Raw %s Ore",
   "ht_shape.ring": "%s Ring",
