add Missed Localized Key with IR

--- a/src/main/resources/assets/ht_materials/lang/ja_jp.json
+++ b/src/main/resources/assets/ht_materials/lang/ja_jp.json
@@ -91,6 +91,7 @@
   "ht_shape.block": "%sブロック",
   "ht_shape.bolt": "%sのボルト",
   "ht_shape.bucket": "%sバケツ",
+  "ht_shape.chunk": "%sの塊",
   "ht_shape.crushed_dust": "%sの砕いた粉",
   "ht_shape.curved_plate": "%sの曲板",
   "ht_shape.double_ingot": "%sの二重インゴット",
@@ -105,6 +106,7 @@
   "ht_shape.nugget": "%sナゲット",
   "ht_shape.ore": "%s鉱石",
   "ht_shape.plate": "%sの板",
+  "ht_shape.purified_ore": "%sの高純度な鉱石",
   "ht_shape.raw_block": "%sの原石ブロック",
   "ht_shape.raw_ore": "%sの原石",
   "ht_shape.ring": "%sのリング",
