--- a/src/main/resources/assets/ht_materials/lang/ja_jp.json
+++ b/src/main/resources/assets/ht_materials/lang/ja_jp.json
@@ -47,7 +47,7 @@
   "ht_material.lava": "溶岩",
   "ht_material.lead": "鉛",
   "ht_material.lithium": "リチウム",
-  "ht_material.magnesium": "マグネシウｍ",
+  "ht_material.magnesium": "マグネシウム",
   "ht_material.manganese": "マンガン",
   "ht_material.marble": "大理石",
   "ht_material.mercury": "水銀",
