Added new material BLACKSTONE Added new material NIKOLITE when Industrial Revolution is loaded Register TR Cell as Fluid Container HTMaterialKey can have alternative names; chrome|chromium

--- a/src/main/resources/assets/ht_materials/lang/ja_jp.json
+++ b/src/main/resources/assets/ht_materials/lang/ja_jp.json
@@ -7,6 +7,7 @@
   "ht_material.basalt": "玄武岩",
   "ht_material.bauxite": "ボーキサイト",
   "ht_material.beryllium": "ベリリウム",
+  "ht_material.blackstone": "ブラックストーン",
   "ht_material.brass": "黄銅",
   "ht_material.brick": "レンガ",
   "ht_material.bronze": "青銅",
@@ -90,6 +91,7 @@
   "ht_shape.blade": "%sの刃",
   "ht_shape.block": "%sブロック",
   "ht_shape.bolt": "%sのボルト",
+  "ht_shape.bricks": "%sのレンガ",
   "ht_shape.bucket": "%sバケツ",
   "ht_shape.crushed_dust": "%sの砕いた粉",
   "ht_shape.curved_plate": "%sの曲板",
@@ -102,8 +104,10 @@
   "ht_shape.hot_ingot": "熱い%sインゴット",
   "ht_shape.ingot": "%sインゴット",
   "ht_shape.large_plate": "%sの大きな板",
+  "ht_shape.log": "%sの原木",
   "ht_shape.nugget": "%sナゲット",
   "ht_shape.ore": "%s鉱石",
+  "ht_shape.planks": "%sの木材",
   "ht_shape.plate": "%sの板",
   "ht_shape.raw_block": "%sの原石ブロック",
   "ht_shape.raw_ore": "%sの原石",
