--- a/src/main/resources/assets/ht_materials/lang/en_us.json
+++ b/src/main/resources/assets/ht_materials/lang/en_us.json
@@ -7,6 +7,7 @@
   "ht_material.basalt": "Basalt",
   "ht_material.bauxite": "Bauxite",
   "ht_material.beryllium": "Beryllium",
+  "ht_material.blackstone": "Blackstone",
   "ht_material.brass": "Brass",
   "ht_material.brick": "Brick",
   "ht_material.bronze": "Bronze",
@@ -90,6 +91,7 @@
   "ht_shape.blade": "%s Blade",
   "ht_shape.block": "Block of %s",
   "ht_shape.bolt": "%s Bolt",
+  "ht_shape.bricks": "%s Bricks",
   "ht_shape.bucket": "%s Bucket",
   "ht_shape.crushed_dust": "%s Crushed Dust",
   "ht_shape.curved_plate": "%s Curved Plate",
@@ -102,8 +104,10 @@
   "ht_shape.hot_ingot": "%s Hot Ingot",
   "ht_shape.ingot": "%s Ingot",
   "ht_shape.large_plate": "%s Large Plate",
+  "ht_shape.log": "%s Log",
   "ht_shape.nugget": "%s Nugget",
   "ht_shape.ore": "%s Ore",
+  "ht_shape.planks": "%s Planks",
   "ht_shape.plate": "%s Plate",
   "ht_shape.raw_block": "Raw %s Block",
   "ht_shape.raw_ore": "Raw %s Ore",
