Removed unused properties Manual import of pull request #2

--- a/src/main/resources/assets/ht_materials/lang/ja_jp.json
+++ b/src/main/resources/assets/ht_materials/lang/ja_jp.json
@@ -48,7 +48,7 @@
   "ht_material.lava": "溶岩",
   "ht_material.lead": "鉛",
   "ht_material.lithium": "リチウム",
-  "ht_material.magnesium": "マグネシウｍ",
+  "ht_material.magnesium": "マグネシウム",
   "ht_material.manganese": "マンガン",
   "ht_material.marble": "大理石",
   "ht_material.mercury": "水銀",
@@ -93,6 +93,7 @@
   "ht_shape.bolt": "%sのボルト",
   "ht_shape.bricks": "%sのレンガ",
   "ht_shape.bucket": "%sバケツ",
+  "ht_shape.chunk": "%sの塊",
   "ht_shape.crushed_dust": "%sの砕いた粉",
   "ht_shape.curved_plate": "%sの曲板",
   "ht_shape.double_ingot": "%sの二重インゴット",
@@ -109,6 +110,7 @@
   "ht_shape.ore": "%s鉱石",
   "ht_shape.planks": "%sの木材",
   "ht_shape.plate": "%sの板",
+  "ht_shape.purified_ore": "%sの高純度な鉱石",
   "ht_shape.raw_block": "%sの原石ブロック",
   "ht_shape.raw_ore": "%sの原石",
   "ht_shape.ring": "%sのリング",
